Fix sidebar spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,6 +46,8 @@ h1 {
 .service-name {
   font: 1.2rem "Lucida Grande", Helvetica, Arial, sans-serif;
   color: #62b3d3;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 .sidebar-header {
